<resources>
    <string name="app_name" translatable="false">Agricity Test2</string>
    <string name="username">Utilizador</string>
    <string name="password">Palavra Passe</string>
    <string name="forgot_your_password">Esqueci a password</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="contribute">Contribuir</string>
    <string name="todo_list">TODO LIST</string>
    <string name="edit_profile">Editar Perfil</string>
    <string name="college_name">College Name</string>
    <string name="firstn_lastn">Nome Proprio Sobrenome</string>
    <string name="practice">Praticar</string>
    <string name="learn">Aprender</string>
    <string name="interests">Interesses</string>
    <string name="dashboard_help">Ajuda</string>
    <string name="dashboard_settings">Definições</string>
    <string name="dashboard">Dashboard</string>
    <string name="main_menu">Menu Principal</string>
    <string name="codigo">Codigo</string>
    <string name="acesso">teste</string>
    <string name="signUp">Registar</string>
    <string name="fullname">Nome Completo</string>
    <string name="email">Endereço e-mail</string>
    <string name="loginhere">Já tem conta? Faça login <u><b>aqui</b></u></string>
    <string name="signuphere">Não tem conta? Faça registo <u><b>aqui</b></u></string>
    <string name="button">Button</string>
    <string name="connectToDB">Ligar</string>
    <string name="buttonPress">Button</string>
    <string name="temperatura">Temperatura do ar</string>
    <string name="humidity">Humidade do ar</string>
    <string name="windSpeed">Velocidade do Vento</string>
    <string name="pressure">Pressão barométrica</string>
    <string name="rain24hours">Chuva 24 Horas</string>
    <string name="windDirection">Direcão do Vento</string>
    <string name="tempValue">%s ºC</string>
    <string name="humidityValue">%s %% </string>
    <string name="pressureValue">%s Bar</string>
    <string name="rain24hrValue">%s mm</string>
    <string name="windSpeedValue">%s KM/h</string>
    <string name="windDirValue">%s</string>
    <string name="graphDomainTitle">%s</string>
    <string name="graphTitle">Gráfico de %s conforme o dia</string>
    <string name="graphRangeTitle">%s</string>
    <string name="windDirectionValue">NNW</string>
    <string name="signInAsGuest">Entrar anónimo</string>
    <string name="logOutButton">Log out</string>
    <string name="mode">Day</string>
    <string name="loginSuccess">Sucesso login</string>
    <string name="registerSuccess">Sucesso registo</string>
    <string name="soilTemperature">Temperatura do solo</string>
    <string name="soilHumidity">Humidade do solo</string>
    <string name="soilTempValue">%s ºC</string>
    <string name="soilHumidityValue">%s %%</string>
    <string name="locationNameTextViewValue">%s</string>
</resources>