<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:id="@+id/plotFrameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="15dp"
        android:paddingBottom="15dp">

        <com.androidplot.xy.XYPlot
            android:id="@+id/plot"
            style="@style/APDefacto.Light"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            app:domainTitle="@string/graphDomainTitle"
            app:lineLabelRotationBottom="-45"
            app:lineLabels="left|bottom"
            app:rangeTitle="@string/graphRangeTitle"
            app:title="@string/graphTitle" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>